@@ -10,6 +10,12 @@ java {
     targetCompatibility = JavaVersion.VERSION_21
 }
 
+configurations.checkstyle {
+    resolutionStrategy.capabilitiesResolution.withCapability("com.google.collections:google-collections") {
+        select("com.google.guava:guava:0")
+    }
+}
+
 repositories {
     mavenCentral()
 }
@@ -17,7 +23,7 @@ repositories {
 dependencies {
     // Checks
     errorprone 'com.google.errorprone:error_prone_core:2.15.0'
-    checkstyle 'com.puppycrawl.tools:checkstyle:10.3.3'
+    checkstyle 'com.puppycrawl.tools:checkstyle:10.13.0'
 
     // Errorprone annotations for solve with warnings
     implementation group: 'com.google.errorprone', name: 'error_prone_annotations', version: '2.15.0'
@@ -60,4 +66,11 @@ compileJava {
 
 compileTestJava {
     options.compilerArgs += ["--enable-preview"]
+}
+
+application {
+    mainClass = 'ru.vk.itmo.test.reference.ReferenceService'
+    applicationDefaultJvmArgs = ['-Xmx128m', '--enable-preview', '-Xlog:gc']
+    // + ['-XX:+UseSerialGC']
+//
 }
